fix layout bug between home and posts pages

--- a/assets/css/book-promo.css
+++ b/assets/css/book-promo.css
@@ -97,6 +97,8 @@
 .book-promo-mobile p {
     margin-top: 15px;
     margin-bottom: 15px;
+    font-size: 1rem;
+    font-family: sans-serif;
 }
 
 .book-promo-mobile a {
